Add support for adjusting player count (sp)

--- a/config/params.ini
+++ b/config/params.ini
@@ -258,6 +258,9 @@ region_ips=
 ; This is the hot ip that we want to get
 dclone_hotip=
 
+[single_player]
+player_count=3
+
 [advanced_options]
 ;use "can_teleport_natively" or "can_teleport_with_charges" if you want to force certain behavior in case autodetection isn't working properly
 override_capabilities=
