--- a/config/params.ini
+++ b/config/params.ini
@@ -261,7 +261,7 @@ region_ips=
 dclone_hotip=
 
 [single_player]
-player_count=3
+player_count=
 
 [advanced_options]
 ;use "can_teleport_natively" or "can_teleport_with_charges" if you want to force certain behavior in case autodetection isn't working properly
